--- a/app/src/main/res/layout/orders_layout.xml
+++ b/app/src/main/res/layout/orders_layout.xml
@@ -13,25 +13,26 @@
 
         <TextView
             android:id="@+id/order_user_name"
-            android:layout_width="160dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="User Name"
             android:textColor="@color/white"
-            android:textSize="14dp"
-            android:layout_marginLeft="5dp"
+            android:textSize="16dp"
+            android:layout_marginLeft="15dp"
             android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/order_phone_number"
-            android:layout_width="160dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Phone Number"
             android:layout_alignParentEnd="true"
             android:textColor="@color/white"
-            android:textSize="14dp"
+            android:textSize="16dp"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:textStyle="bold"/>
+            android:layout_marginRight="15dp"
+            android:textStyle="bold"
+            android:visibility="visible"/>
         <TextView
             android:id="@+id/order_total_price"
             android:layout_width="match_parent"
@@ -45,7 +46,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:textStyle="bold"
-            android:layout_marginTop="25dp"/>
+            android:layout_marginTop="35dp"/>
         <TextView
             android:id="@+id/order_address_city"
             android:layout_width="match_parent"
