--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -94,13 +94,26 @@
         android:textStyle="bold" />
 
     <EditText
+        android:id="@+id/suggestions_text"
         android:layout_width="372dp"
         android:layout_height="48dp"
         android:layout_below="@+id/suggestions"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="15dp"
         android:background="@drawable/suggestions"
         android:textSize="20dp"/>
+
+    <Button
+        android:id="@+id/send_feedback"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/suggestions_text"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="139dp"
+        android:text="Send Feedback"
+        android:elevation="10dp"/>
 
 
 </RelativeLayout>
